:sparkles: Add extra margin to carousel-caption in both preprocessors

--- a/conFusion/css/styles.scss
+++ b/conFusion/css/styles.scss
@@ -57,6 +57,10 @@ body {
 .carousel {
     background: $background-dark;
     
+    .carousel-caption {
+        bottom: 60px;
+    }
+
     .carousel-item {
         height: $carousel-item-height;
 
