--- a/conFusion/css/styles.css
+++ b/conFusion/css/styles.css
@@ -39,6 +39,8 @@ body {
 
 .carousel {
   background: #512DA8; }
+  .carousel .carousel-caption {
+    bottom: 60px; }
   .carousel .carousel-item {
     height: 300px; }
     .carousel .carousel-item img {
