:boom: Fourth assignment done

--- a/conFusion/css/styles.less
+++ b/conFusion/css/styles.less
@@ -78,3 +78,18 @@ body {
     position: absolute;
     bottom: 0px;
 }
+
+.modal-header {
+    background: @background-dark;
+    color: floralwhite;
+}
+
+.modal-body {
+    background: @background-pale;
+}
+
+.modal {
+    button.close {
+        color: floralwhite;
+    }
+}
